:sparkles: feat: variable declaration parse