@@ -1,6 +1,7 @@
 package lang.c.parse;
 
 import java.io.PrintStream;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 
 import lang.*;
@@ -8,14 +9,15 @@ import lang.c.*;
 import lang.c.parse.statement.Statement;
 
 public class Program extends CParseRule {
-	// program         ::= { statement } EOFprogram ::= expression EOF
-	ArrayList<CParseRule> statment = new ArrayList<CParseRule>();
+	// program     ::= { declaration } { statement } EOF
+	ArrayDeque<CParseRule> declaration = new ArrayDeque<CParseRule>();
+	ArrayDeque<CParseRule> statment = new ArrayDeque<CParseRule>();
 
 	public Program(CParseContext pcx) {
 	}
 
 	public static boolean isFirst(CToken tk) {
-		return Statement.isFirst(tk);
+		return Declaration.isFirst(tk) || Statement.isFirst(tk);
 	}
 
 	public void parse(CParseContext pcx) throws FatalErrorException {
@@ -23,10 +25,14 @@ public class Program extends CParseRule {
 		CTokenizer ct = pcx.getTokenizer();
 		CToken tk = ct.getCurrentToken(pcx);
 
+		while (Declaration.isFirst(tk)) {
+			declaration.addLast(new Declaration(pcx));
+			declaration.getLast().parse(pcx);
+			tk = ct.getNextToken(pcx);
+		}
 		while (Statement.isFirst(tk)) {
-			statment.add(new Statement(pcx));
-			statment.get(statment.size() - 1).parse(pcx);
-			tk = ct.getCurrentToken(pcx);
+			statment.addLast(new Statement(pcx));
+			statment.getLast().parse(pcx);
 			tk = ct.getCurrentToken(pcx); // statementが次の字句を読んでしまうので次の字句は読まない
 		}
 		if (tk.getType() == CToken.TK_RCUR) {
